field: add assistant field slug
